[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/bombs_icon.png" type="Texture" id=1]
[ext_resource path="res://atk/skill.gd" type="Script" id=11]
[ext_resource path="res://atk/cd.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.745098, 0.0823529, 0.74902, 0.14902 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0509804, 0.862745, 0.176471, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="skill" type="MarginContainer"]
margin_right = 86.0
margin_bottom = 86.0
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 86.0
margin_bottom = 86.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 83.0
margin_bottom = 83.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="cd" parent="PanelContainer" instance=ExtResource( 12 )]
mouse_filter = 1

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="xh" type="Label" parent="Node2D"]
margin_right = 85.0
margin_bottom = 85.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 2
valign = 2

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="PanelContainer" to="." method="_on_PanelContainer_gui_input"]
[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="cdOk" from="PanelContainer/cd" to="." method="_on_cd_cdOk"]
